@@ -1,3 +1,6 @@
+2004-05-27  Karl Runge <runge@karlrunge.com>
+	* add view-only passwd via -viewpasswd and 2nd line of -passwdfile
+
 2004-05-21  Karl Runge <runge@karlrunge.com>
 	* -accept: add view-only decision and other improvements.
 	* add -gone command option for when a client leaves.
