@@ -1,3 +1,8 @@
+2004-05-27  Karl Runge <runge@karlrunge.com>
+	* x11vnc: -viewpasswd, viewonly passwds.
+	* some typos in prepare_x11vnc_dist.sh 
+	* libvncserver: fix view-only plain passwd and view-only CutText 
+
 2004-05-25  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
 	* moved the library into libvncserver/
 	* moved x11vnc into x11vnc/
